final commit with markups

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
 
   <title>WATS 3020: FizzBuzz</title>
-  <meta name="description" content="WATS 3020 FizzBuzz Assignment">
-  <meta name="author" content="Jane Student">
+  <meta name="description" content="FizzBuzz">
+  <meta name="author" content="Jeff Salazar">
 
   <link rel="stylesheet" href="css/main.css">
 
@@ -15,7 +15,7 @@
 
 <body>
   <h1>Welcome to FizzBuzz!</h1>
-  <p>Generating results for numbers up to: <span id="max-number">0</span>.</p>
+  <p>Lets take a look at the numbers you've entered today: <span id="max-number">0</span>.</p>
   <pre id="output">
     <!-- FizzBuzz results go here. -->
   </pre>
